--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             </tr>
 
             <tr>
-                <td><b>Title goes here</b></td>
-                <td><b>Title goes here</b></td>
+                <td id="one"><b>Title goes here</b></td>
+                <td id="one"><b>Title goes here</b></td>
             </tr>
             <tr id="hello">
                 <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</td>
@@ -38,8 +38,8 @@
             </tr>
 
             <tr>
-                <td><b>Title goes here</b></td>
-                <td><b>Title goes here</b></td>
+                <td id="one"><b>Title goes here</b></td>
+                <td id="one"><b>Title goes here</b></td>
             </tr>
 
             <tr id="hello">
